# suturo_msgs

./: .gitignore  README.md
docs/: Makefile  conf.py  index.rst  pullreq-guide.rst  pullreqguide.rst  rpc_server_fuer_pepper.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/organisation/: git_struktur.rst
docs/tutorials/: installation.rst  neue_artikel_schreiben.rst  travis_ci.rst
docs/tutorials/knowledge/: jplTrouble.rst  rosjavaEclipse.rst  (+6 more)
interfaces/knowledge_lib/: CMakeLists.txt  package.xml
interfaces/manipulation_lib/: CMakeLists.txt  package.xml
interfaces/perception_lib/: CMakeLists.txt  package.xml
interfaces/planning_lib/: CMakeLists.txt  package.xml
knowledge_msgs/: CMakeLists.txt
knowledge_msgs/srv/: LogAction.srv  LogEvent.srv
perception_msgs/: CMakeLists.txt  ObjectDetection.msg  package.xml
perception_msgs/msg/: ObjectDetection.msg
suturo_knowledge_msgs/: CMakeLists.txt  package.xml
suturo_knowledge_msgs/srv/: ConnectFrames.srv  LogAction.srv  LogExperimentDescription.srv
suturo_manipulation_msgs/: CMakeLists.txt  package.xml
suturo_manipulation_msgs/action/: MoveRobot.action
suturo_manipulation_msgs/msg/: Float64Map.msg  TypedParam.msg
suturo_perception_msgs/: CMakeLists.txt  package.xml
suturo_perception_msgs/msg/: CollisionObjects.msg  ObjectDetection.msg
suturo_perception_msgs/srv/: PerceiveAction.srv  RunPipeline.srv
suturo_planning_msgs/: CMakeLists.txt  package.xml
(+10 files in other folders)
